--- a/package.json
+++ b/package.json
@@ -18,6 +18,16 @@
     "next": "13.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "class-variance-authority": "^0.6.0",
+    "postcss": "^8.4.23",
+    "prettier": "^2.8.8",
+    "prettier-plugin-tailwindcss": "^0.2.8",
+    "tailwind-merge": "^1.12.0",
+    "tailwindcss": "^3.3.2"
   }
 }
