--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.2.8",
     "tailwind-merge": "^1.12.0",
+    "tailwind-scrollbar": "^3.0.1",
     "tailwindcss": "^3.3.2"
   }
 }
